# opus-orchestrator-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  code_review_crew.py  config.example.yaml  install.sh  opus_manuscript_1773361423.md  opus_manuscript_1773361785.md  opus_manuscript_1773369644.md  opus_manuscript_1773372517.md  opus_manuscript_1773372738.md  opus_manuscript_1773445426.md  opus_manuscript_20260313_025334.md  pyproject.toml  run_teams.py  teams.py  test_memoir.py
deployments/: docker-compose.yml
deployments/texlive-api/: README.md  docker-compose.yml  texlive_api.py
docs/: NONFICTION_FRAMEWORKS.md  NONFICTION_PIPELINE.md
opus_orchestrator/: __init__.py  __main__.py  autogen_critique.py  cli.py  config.py  frameworks.py  html_export.py  langgraph_state.py  langgraph_workflow.py  latex_compile.py  logging.py  nonfiction_frameworks.py  nonfiction_generator.py  nonfiction_taxonomy.py  orchestrator.py  pydanticai_agent.py  scrivener_export.py  server.py  state.py  state_adapter.py  texlive_client.py  web_ui.py  workflow.py
opus_orchestrator/agents/: base.py  research.py
opus_orchestrator/crews/: __init__.py  base_crew.py  fiction_crew.py  nonfiction_crew.py
opus_orchestrator/nonfiction/: __init__.py  academic_papers.py  classifier.py  content_infer.py  creative_frameworks.py  critique_criteria.py  expanded_frameworks.py  intake.py  research_integration.py  rpg_frameworks.py  textbook_frameworks.py
opus_orchestrator/schemas/: book.py  (+2 more)
tests/: test_classifier.py  test_e2e.py  test_generation.py  test_github_ingest.py  test_nonfiction.py  test_orchestrator.py  test_output_push.py  test_s3_ingest.py
(+60 files in other folders)
