[project]
name = "opus-orchestrator-ai"
version = "0.1.0"
description = "Full-flow AI book generation orchestrator using LangGraph, CrewAI, AutoGen, and PydanticAI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mark Randall Havens", email = "mark@thefoldwithin.earth"}
]
keywords = ["ai", "writing", "book", "orchestrator", "crewai", "langgraph", "autogen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "crewai>=0.80.0",
    "autogen>=0.4.0",
    "pydantic-ai>=0.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pygithub>=2.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "markdown>=3.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
]
storage = [
    "boto3>=1.35.0",
]
all = [
    "opus-orchestrator-ai[server,storage]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
